fix overflow-x

--- a/br.usp.each.saeg.jaguar.core/src/main/resources/html-output/css/test-requirement-type-line-code-model.css
+++ b/br.usp.each.saeg.jaguar.core/src/main/resources/html-output/css/test-requirement-type-line-code-model.css
@@ -60,7 +60,6 @@ h2 {
  * ******************************/
 
 .code{
-    overflow-x: scroll;
     line-height: 1rem !important;
 }
 
@@ -72,7 +71,7 @@ code {
 
 pre {
     margin-top: 15px;
-    overflow:auto;
+    overflow: auto;
     border: 0.063rem solid black;
 }
 
